feat: completa frontend com todas as 25 telas e ajusta layout conforme repositório do Lovable

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,19 +1,149 @@
 {
   "welcome": "Welcome to Saúde Conectada",
-  "login": "Login",
-  "logout": "Logout",
-  "patients": "Patients",
-  "appointments": "Appointments",
-  "profile": "Profile",
-  "email": "Email",
-  "password": "Password",
-  "username": "Username",
   "cpf": "CPF",
-  "register": "Register",
-  "recoverPassword": "Recover Password",
-  "newPassword": "New Password",
-  "resetPassword": "Reset Password",
-  "createAppointment": "Create Appointment",
+  "password": "Password",
+  "login": "Login",
+  "logging_in": "Logging in...",
+  "forgot_password": "Forgot my password",
+  "register_with_rg": "Register with RG",
+  "login_success": "Login successful",
+  "welcome_message": "Welcome back!",
+  "login_error": "Error logging in",
+  "libras_help": "Help in Libras",
+  "close": "Close",
+  "email": "Email",
+  "optional": "Optional",
+  "phone": "Phone",
+  "birth_date": "Birth Date",
+  "name": "Name",
+  "lgpd_consent": "I agree with the LGPD",
+  "terms": "Terms",
+  "confirm_data": "Confirm Data",
+  "registering": "Registering...",
+  "lgpd_required": "You must accept the LGPD terms",
+  "register_error": "Error registering",
+  "error_saving_data": "Error saving data",
+  "register_success": "Registration successful",
+  "registered_successfully": "You have been successfully registered!",
+  "symptoms_form": "Symptoms Form",
+  "select_symptoms": "Select symptoms",
+  "describe_symptoms": "Describe your symptoms",
+  "describe_symptoms_placeholder": "E.g., Sore throat for 2 days",
+  "vital_signs": "Vital Signs",
+  "blood_pressure": "Blood Pressure",
+  "oxygen_saturation": "Oxygen Saturation",
+  "temperature": "Temperature",
+  "heart_rate": "Heart Rate",
+  "measure_vital_signs": "Measure Vital Signs",
+  "hide_vital_signs": "Hide Vital Signs",
+  "confirm": "Confirm",
+  "submitting": "Submitting...",
+  "select_symptom": "Select at least one symptom",
+  "error_saving_triage": "Error saving triage",
+  "triage_success": "Triage submitted",
+  "triage_submitted": "Your triage has been successfully submitted!",
+  "waiting_for_doctor": "Waiting for Doctor",
+  "connecting_to_doctor": "Connecting with Dr. Silva (Generalist)",
+  "connection_status": "Connection Status",
+  "good": "Good",
+  "cancel": "Cancel",
+  "confirm_cancel": "Are you sure you want to cancel?",
+  "yes": "Yes",
+  "no": "No",
+  "consultation_canceled": "Consultation canceled",
+  "returned_to_dashboard": "You have been redirected to the dashboard",
+  "telemedicine_call": "Telemedicine Video Call",
+  "doctor_video": "Doctor's Video",
+  "patient_video": "Your Video",
+  "camera_off": "Camera Off",
+  "doctor_info": "Dr. Silva, CRM 12345",
+  "turn_off_camera": "Turn Off Camera",
+  "turn_on_camera": "Turn On Camera",
+  "open_chat": "Open Chat",
+  "end_call": "End Call",
+  "ai_suggestion": "AI Suggestion",
+  "ai_resfriado": "Cold: Antihistamine",
+  "type_message": "Type your message",
+  "send": "Send",
+  "message_sent": "Message sent",
+  "error_ending_consultation": "Error ending consultation",
+  "consultation_ended": "Consultation ended",
+  "redirecting_to_documents": "Redirecting to documents",
+  "documents": "Prescriptions and Certificates",
+  "type": "Type",
   "date": "Date",
-  "description": "Description"
+  "validity": "Validity",
+  "expires_in": "Expires in",
+  "days": "days",
+  "download": "Download",
+  "share": "Share",
+  "no_documents": "No documents found",
+  "document_shared": "Document shared",
+  "shared_via_email": "Sent via email",
+  "chatbot": "Support Chatbot",
+  "you": "You",
+  "bot": "Bot",
+  "bot_response": "Got it! How can I help you more?",
+  "error": "Error",
+  "feedback_title": "Post-Consultation Feedback",
+  "rating": "Rating",
+  "comment": "Comment",
+  "comment_placeholder": "Leave your comment",
+  "submit": "Submit",
+  "select_rating": "Select a rating",
+  "error_saving_feedback": "Error saving feedback",
+  "feedback_success": "Feedback submitted",
+  "feedback_submitted": "Thank you for your feedback!",
+  "gamification_title": "Gamification",
+  "points": "points",
+  "redeem": "Redeem",
+  "discount_10": "10% Discount",
+  "error_redeeming": "Error redeeming reward",
+  "reward_redeemed": "Reward redeemed",
+  "redeemed_successfully": "You have successfully redeemed your reward!",
+  "insufficient_points": "Insufficient points",
+  "notifications": "Notifications",
+  "mark_as_read": "Mark as Read",
+  "no_notifications": "No notifications",
+  "error_marking_read": "Error marking as read",
+  "error_loading_notifications": "Error loading notifications",
+  "doctor_login": "Doctor Login",
+  "diagnose_validation": "Diagnose Validation",
+  "reception": "Reception",
+  "waiting_room": "Waiting Room",
+  "in_person_consultation": "In-Person Consultation",
+  "medication_record": "Medication Record",
+  "exam_scheduling": "Exam Scheduling",
+  "pharmacy": "Pharmacy",
+  "icu_monitoring": "ICU/Beds",
+  "admin_reports": "Admin Reports",
+  "wearables_integration": "Wearables Integration",
+  "tutorial": "Interactive Tutorial",
+  "skip": "Skip",
+  "coming_soon": "Coming soon",
+  "dashboard": "Dashboard",
+  "profile": "Profile",
+  "appointments": "Appointments",
+  "patients": "Patients",
+  "actions": "Actions",
+  "view_details": "View Details",
+  "no_patients": "No patients found",
+  "error_loading_patients": "Error loading patients",
+  "patient": "Patient",
+  "description": "Description",
+  "no_description": "No description",
+  "no_appointments": "No appointments found",
+  "error_loading_appointments": "Error loading appointments",
+  "history": "History",
+  "diagnosis": "Diagnosis",
+  "no_diagnosis": "No diagnosis",
+  "doctor": "Doctor",
+  "no_history": "No history found",
+  "error_loading_history": "Error loading history",
+  "gamification_points": "Your Points",
+  "redeem_rewards": "Redeem Rewards",
+  "edit_profile": "Edit Profile",
+  "health_connected": "Saúde Conectada",
+  "logout": "Logout",
+  "loading": "Loading..."
 }
