--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,19 +1,149 @@
 {
   "welcome": "Bienvenido a Saúde Conectada",
-  "login": "Iniciar Sesión",
-  "logout": "Cerrar Sesión",
-  "patients": "Pacientes",
-  "appointments": "Citas",
-  "profile": "Perfil",
-  "email": "Correo Electrónico",
-  "password": "Contraseña",
-  "username": "Nombre de Usuario",
   "cpf": "CPF",
-  "register": "Registrarse",
-  "recoverPassword": "Recuperar Contraseña",
-  "newPassword": "Nueva Contraseña",
-  "resetPassword": "Restablecer Contraseña",
-  "createAppointment": "Crear Cita",
+  "password": "Contraseña",
+  "login": "Iniciar sesión",
+  "logging_in": "Iniciando sesión...",
+  "forgot_password": "Olvidé mi contraseña",
+  "register_with_rg": "Registrarse con RG",
+  "login_success": "Inicio de sesión exitoso",
+  "welcome_message": "¡Bienvenido de vuelta!",
+  "login_error": "Error al iniciar sesión",
+  "libras_help": "Ayuda en Libras",
+  "close": "Cerrar",
+  "email": "Correo electrónico",
+  "optional": "Opcional",
+  "phone": "Teléfono",
+  "birth_date": "Fecha de Nacimiento",
+  "name": "Nombre",
+  "lgpd_consent": "Acepto la LGPD",
+  "terms": "Términos",
+  "confirm_data": "Confirmar Datos",
+  "registering": "Registrando...",
+  "lgpd_required": "Debes aceptar los términos de la LGPD",
+  "register_error": "Error al registrarse",
+  "error_saving_data": "Error al guardar datos",
+  "register_success": "Registro exitoso",
+  "registered_successfully": "¡Te has registrado con éxito!",
+  "symptoms_form": "Formulario de Síntomas",
+  "select_symptoms": "Selecciona los síntomas",
+  "describe_symptoms": "Describe tus síntomas",
+  "describe_symptoms_placeholder": "Ej.: Dolor de garganta desde hace 2 días",
+  "vital_signs": "Signos Vitales",
+  "blood_pressure": "Presión Arterial",
+  "oxygen_saturation": "Saturación de Oxígeno",
+  "temperature": "Temperatura",
+  "heart_rate": "Frecuencia Cardíaca",
+  "measure_vital_signs": "Medir Signos Vitales",
+  "hide_vital_signs": "Ocultar Signos Vitales",
+  "confirm": "Confirmar",
+  "submitting": "Enviando...",
+  "select_symptom": "Selecciona al menos un síntoma",
+  "error_saving_triage": "Error al guardar triaje",
+  "triage_success": "Triaje enviado",
+  "triage_submitted": "¡Tu triaje ha sido enviado con éxito!",
+  "waiting_for_doctor": "Esperando al Médico",
+  "connecting_to_doctor": "Conectando con Dr. Silva (Generalista)",
+  "connection_status": "Estado de la Conexión",
+  "good": "Bueno",
+  "cancel": "Cancelar",
+  "confirm_cancel": "¿Estás seguro de que deseas cancelar?",
+  "yes": "Sí",
+  "no": "No",
+  "consultation_canceled": "Consulta cancelada",
+  "returned_to_dashboard": "Has sido redirigido al panel",
+  "telemedicine_call": "Videollamada de Telemedicina",
+  "doctor_video": "Vídeo del Médico",
+  "patient_video": "Tu Vídeo",
+  "camera_off": "Cámara Apagada",
+  "doctor_info": "Dr. Silva, CRM 12345",
+  "turn_off_camera": "Apagar Cámara",
+  "turn_on_camera": "Encender Cámara",
+  "open_chat": "Abrir Chat",
+  "end_call": "Finalizar Llamada",
+  "ai_suggestion": "Sugerencia de IA",
+  "ai_resfriado": "Resfriado: Antihistamínico",
+  "type_message": "Escribe tu mensaje",
+  "send": "Enviar",
+  "message_sent": "Mensaje enviado",
+  "error_ending_consultation": "Error al finalizar consulta",
+  "consultation_ended": "Consulta finalizada",
+  "redirecting_to_documents": "Redirigiendo a documentos",
+  "documents": "Recetas y Certificados",
+  "type": "Tipo",
   "date": "Fecha",
-  "description": "Descripción"
+  "validity": "Validez",
+  "expires_in": "Expira en",
+  "days": "días",
+  "download": "Descargar",
+  "share": "Compartir",
+  "no_documents": "No se encontraron documentos",
+  "document_shared": "Documento compartido",
+  "shared_via_email": "Enviado por correo electrónico",
+  "chatbot": "Chatbot de Soporte",
+  "you": "Tú",
+  "bot": "Bot",
+  "bot_response": "¡Entendido! ¿Cómo puedo ayudarte más?",
+  "error": "Error",
+  "feedback_title": "Feedback Post-Consulta",
+  "rating": "Calificación",
+  "comment": "Comentario",
+  "comment_placeholder": "Deja tu comentario",
+  "submit": "Enviar",
+  "select_rating": "Selecciona una calificación",
+  "error_saving_feedback": "Error al guardar feedback",
+  "feedback_success": "Feedback enviado",
+  "feedback_submitted": "¡Gracias por tu feedback!",
+  "gamification_title": "Gamificación",
+  "points": "puntos",
+  "redeem": "Canjear",
+  "discount_10": "Descuento del 10%",
+  "error_redeeming": "Error al canjear recompensa",
+  "reward_redeemed": "Recompensa canjeada",
+  "redeemed_successfully": "¡Has canjeado tu recompensa con éxito!",
+  "insufficient_points": "Puntos insuficientes",
+  "notifications": "Notificaciones",
+  "mark_as_read": "Marcar como leído",
+  "no_notifications": "No hay notificaciones",
+  "error_marking_read": "Error al marcar como leído",
+  "error_loading_notifications": "Error al cargar notificaciones",
+  "doctor_login": "Inicio de Sesión del Médico",
+  "diagnose_validation": "Validación de Diagnósticos",
+  "reception": "Recepción",
+  "waiting_room": "Sala de Espera",
+  "in_person_consultation": "Consulta Presencial",
+  "medication_record": "Registro de Medicación",
+  "exam_scheduling": "Programación de Exámenes",
+  "pharmacy": "Farmacia",
+  "icu_monitoring": "UCI/Camas",
+  "admin_reports": "Informes Admin",
+  "wearables_integration": "Integración con Wearables",
+  "tutorial": "Tutorial Interactivo",
+  "skip": "Omitir",
+  "coming_soon": "Próximamente",
+  "dashboard": "Panel",
+  "profile": "Perfil",
+  "appointments": "Citas",
+  "patients": "Pacientes",
+  "actions": "Acciones",
+  "view_details": "Ver Detalles",
+  "no_patients": "No se encontraron pacientes",
+  "error_loading_patients": "Error al cargar pacientes",
+  "patient": "Paciente",
+  "description": "Descripción",
+  "no_description": "Sin descripción",
+  "no_appointments": "No se encontraron citas",
+  "error_loading_appointments": "Error al cargar citas",
+  "history": "Historial",
+  "diagnosis": "Diagnóstico",
+  "no_diagnosis": "Sin diagnóstico",
+  "doctor": "Médico",
+  "no_history": "No se encontró historial",
+  "error_loading_history": "Error al cargar historial",
+  "gamification_points": "Tus Puntos",
+  "redeem_rewards": "Canjear Recompensas",
+  "edit_profile": "Editar Perfil",
+  "health_connected": "Saúde Conectada",
+  "logout": "Cerrar sesión",
+  "loading": "Cargando..."
 }
