feat: completa mocks das telas restantes e atualiza traduções

--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -1,19 +1,149 @@
 {
   "welcome": "Bem-vindo ao Saúde Conectada",
-  "login": "Entrar",
-  "logout": "Sair",
-  "patients": "Pacientes",
-  "appointments": "Consultas",
-  "profile": "Perfil",
-  "email": "Email",
-  "password": "Senha",
-  "username": "Nome de Usuário",
   "cpf": "CPF",
-  "register": "Cadastrar",
-  "recoverPassword": "Recuperar Senha",
-  "newPassword": "Nova Senha",
-  "resetPassword": "Redefinir Senha",
-  "createAppointment": "Criar Consulta",
+  "password": "Senha",
+  "login": "Entrar",
+  "logging_in": "Entrando...",
+  "forgot_password": "Esqueci minha senha",
+  "register_with_rg": "Cadastrar com RG",
+  "login_success": "Login bem-sucedido",
+  "welcome_message": "Bem-vindo de volta!",
+  "login_error": "Erro ao fazer login",
+  "libras_help": "Ajuda em Libras",
+  "close": "Fechar",
+  "email": "E-mail",
+  "optional": "Opcional",
+  "phone": "Telefone",
+  "birth_date": "Data de Nascimento",
+  "name": "Nome",
+  "lgpd_consent": "Concordo com a LGPD",
+  "terms": "Termos",
+  "confirm_data": "Confirmar Dados",
+  "registering": "Cadastrando...",
+  "lgpd_required": "Você deve aceitar os termos da LGPD",
+  "register_error": "Erro ao cadastrar",
+  "error_saving_data": "Erro ao salvar os dados",
+  "register_success": "Cadastro bem-sucedido",
+  "registered_successfully": "Você foi cadastrado com sucesso!",
+  "symptoms_form": "Formulário de Sintomas",
+  "select_symptoms": "Selecione os sintomas",
+  "describe_symptoms": "Descreva seus sintomas",
+  "describe_symptoms_placeholder": "Ex.: Dor de garganta há 2 dias",
+  "vital_signs": "Sinais Vitais",
+  "blood_pressure": "Pressão Arterial",
+  "oxygen_saturation": "Saturação de Oxigênio",
+  "temperature": "Temperatura",
+  "heart_rate": "Batimentos Cardíacos",
+  "measure_vital_signs": "Medir Sinais Vitais",
+  "hide_vital_signs": "Ocultar Sinais Vitais",
+  "confirm": "Confirmar",
+  "submitting": "Enviando...",
+  "select_symptom": "Selecione pelo menos um sintoma",
+  "error_saving_triage": "Erro ao salvar triagem",
+  "triage_success": "Triagem enviada",
+  "triage_submitted": "Sua triagem foi enviada com sucesso!",
+  "waiting_for_doctor": "Aguardando Médico",
+  "connecting_to_doctor": "Conectando com Dr. Silva (Generalista)",
+  "connection_status": "Status da Conexão",
+  "good": "Bom",
+  "cancel": "Cancelar",
+  "confirm_cancel": "Tem certeza que deseja cancelar?",
+  "yes": "Sim",
+  "no": "Não",
+  "consultation_canceled": "Consulta cancelada",
+  "returned_to_dashboard": "Você foi redirecionado ao dashboard",
+  "telemedicine_call": "Videochamada de Telemedicina",
+  "doctor_video": "Vídeo do Médico",
+  "patient_video": "Seu Vídeo",
+  "camera_off": "Câmera Desligada",
+  "doctor_info": "Dr. Silva, CRM 12345",
+  "turn_off_camera": "Desligar Câmera",
+  "turn_on_camera": "Ligar Câmera",
+  "open_chat": "Abrir Chat",
+  "end_call": "Encerrar Chamada",
+  "ai_suggestion": "Sugestão da IA",
+  "ai_resfriado": "Resfriado: antialérgico",
+  "type_message": "Digite sua mensagem",
+  "send": "Enviar",
+  "message_sent": "Mensagem enviada",
+  "error_ending_consultation": "Erro ao encerrar consulta",
+  "consultation_ended": "Consulta encerrada",
+  "redirecting_to_documents": "Redirecionando para documentos",
+  "documents": "Receitas e Atestados",
+  "type": "Tipo",
   "date": "Data",
-  "description": "Descrição"
+  "validity": "Validade",
+  "expires_in": "Expira em",
+  "days": "dias",
+  "download": "Baixar",
+  "share": "Enviar",
+  "no_documents": "Nenhum documento encontrado",
+  "document_shared": "Documento compartilhado",
+  "shared_via_email": "Enviado por e-mail",
+  "chatbot": "Chatbot de Suporte",
+  "you": "Você",
+  "bot": "Bot",
+  "bot_response": "Entendido! Como posso ajudar mais?",
+  "error": "Erro",
+  "feedback_title": "Feedback Pós-Consulta",
+  "rating": "Avaliação",
+  "comment": "Comentário",
+  "comment_placeholder": "Deixe seu comentário",
+  "submit": "Enviar",
+  "select_rating": "Selecione uma avaliação",
+  "error_saving_feedback": "Erro ao salvar feedback",
+  "feedback_success": "Feedback enviado",
+  "feedback_submitted": "Obrigado pelo seu feedback!",
+  "gamification_title": "Gamificação",
+  "points": "pontos",
+  "redeem": "Resgatar",
+  "discount_10": "Desconto de 10%",
+  "error_redeeming": "Erro ao resgatar recompensa",
+  "reward_redeemed": "Recompensa resgatada",
+  "redeemed_successfully": "Você resgatou sua recompensa!",
+  "insufficient_points": "Pontos insuficientes",
+  "notifications": "Notificações",
+  "mark_as_read": "Marcar como lido",
+  "no_notifications": "Nenhuma notificação",
+  "error_marking_read": "Erro ao marcar como lido",
+  "error_loading_notifications": "Erro ao carregar notificações",
+  "doctor_login": "Login do Médico",
+  "diagnose_validation": "Validação de Diagnósticos",
+  "reception": "Recepção",
+  "waiting_room": "Painel de Espera",
+  "in_person_consultation": "Atendimento Presencial",
+  "medication_record": "Registro de Medicação",
+  "exam_scheduling": "Agendamento de Exames",
+  "pharmacy": "Farmácia",
+  "icu_monitoring": "UTI/Leitos",
+  "admin_reports": "Relatórios Admin",
+  "wearables_integration": "Integração com Wearables",
+  "tutorial": "Tutorial Interativo",
+  "skip": "Pular",
+  "coming_soon": "Em breve",
+  "dashboard": "Dashboard",
+  "profile": "Perfil",
+  "appointments": "Consultas",
+  "patients": "Pacientes",
+  "actions": "Ações",
+  "view_details": "Ver Detalhes",
+  "no_patients": "Nenhum paciente encontrado",
+  "error_loading_patients": "Erro ao carregar pacientes",
+  "patient": "Paciente",
+  "description": "Descrição",
+  "no_description": "Sem descrição",
+  "no_appointments": "Nenhuma consulta encontrada",
+  "error_loading_appointments": "Erro ao carregar consultas",
+  "history": "Histórico",
+  "diagnosis": "Diagnóstico",
+  "no_diagnosis": "Sem diagnóstico",
+  "doctor": "Médico",
+  "no_history": "Nenhum histórico encontrado",
+  "error_loading_history": "Erro ao carregar histórico",
+  "gamification_points": "Seus Pontos",
+  "redeem_rewards": "Resgatar Recompensas",
+  "edit_profile": "Editar Perfil",
+  "health_connected": "Saúde Conectada",
+  "logout": "Sair",
+  "loading": "Carregando..."
 }
